--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="this web is for Selling the best shoes is over the world with the best price"/>
+    <meta name="keywords" content="shoes, shop, sport, sport shoes"/>
+    <meta name="author" content="Waleed AlZahrani"/>
+    
     <title>Shoo Shope</title>
 </head>
 <body>
