--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     
     <br>
     <hr>
-    <a href="./public/contact-us.html">Contact us</a>
-    <br>
-    <br>
+    
+    <footer><a href="./public/contact-us.html">Contact us</a></footer>
 </body>
 </html>
