--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     
     <br>
     <hr>
+
+    <a href="./public/Apple.html"><h2>Apple's Table</h2></a>
     
     <footer><a href="./public/contact-us.html">Contact us</a></footer>
 </body>
