--- a/public/Apple.html
+++ b/public/Apple.html
@@ -25,11 +25,11 @@
     <table border="1" style="background-color: #E9E9E9;" >
         <!-- 1 -->
         <tr> 
-            <td>"Siri"</td>
+            <td><b style="font-size: 35pt;">"Siri"</b> </td>
             <td rowspan="4"><img src="../image/assets/iphone_1.png" alt="" style="width: 11.5rem;"  ><br>content posters</td>
             <td rowspan="2"><img src="../image/assets/maps.png" style="width: 6.4rem;"><br> offine maps</td>
             <td rowspan="2" colspan="4"><img src="../image/assets/two_hands.png" style="width: 43.6rem;" alt=""><br> NameDrop</td>
-            <td><img src="../image/assets/swipe.png" style="width: 7.4rem;" alt=""><br><img src="../image/assets/to_reply.png" style="width: 5.8rem;" alt=""></td>
+            <td><img src="../image/assets/swipe.png" style="width: 7.4rem;" alt=""><br> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <img src="../image/assets/to_reply.png" style="width: 5.8rem;" alt=""></td>
         </tr>
         <!-- 2 -->
         <tr>
@@ -48,12 +48,12 @@
         <tr><td colspan="2" rowspan="3"><img style="width: 26.1rem;" src="../image/assets/calendar.png" alt=""><br>standby</td>            
         </tr>
         <!-- 6 -->
-        <tr><td rowspan="2" colspan="2"><img src="../image/assets/check.png" style="width: 5.9rem;" alt=""><br>check in </td>            
-            <td colspan="4"><img src="../image/assets/sticker_dog.png" alt="" style="width: 4.4rem;"> Live Stickers <img src="../image/assets/stricker_flower.png" alt="" style="width: 4.4rem;"></td>
+        <tr><td rowspan="2" colspan="2"><img src="../image/assets/check.png" style="width: 5.9rem;" alt=""><br><b style="font-size: 35pt;">check in</b>  </td>            
+            <td colspan="4"><img src="../image/assets/sticker_dog.png" alt="" style="width: 4.4rem; text-align: center;"><b style="font-size: 45pt;">Live Stickers</b>  <img src="../image/assets/stricker_flower.png" alt="" style="width: 4.4rem;"></td>
         </tr>
         <!-- 7 -->
-        <tr><td colspan="2"><img src="../image/assets/phone_bottom.png" alt="" style="width: 9.55rem;"> Live Voicemail</td>            
-            <td colspan="2">Improved autocorrect <img src="../image/assets/cursor.png" alt="" style="width: 0.37rem;"></td>
+        <tr><td colspan="2"><img src="../image/assets/phone_bottom.png" alt="" style="width: 9.55rem;"> <b style="font-size: 45pt; color: crimson;">Live  Voicemail</b> </td>            
+            <td colspan="2"><h5>Improved autocorrect</h3>  <img src="../image/assets/cursor.png" alt="" style="width: 0.37rem;"></td>
         </tr>
     </table>
 </body>
