--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
     <hr>
 
     <a href="./public/Apple.html"><h2>Apple's Table</h2></a>
+
+
     
-    <footer><a href="./public/contact-us.html">Contact us</a></footer>
+    <footer>
+        <a href="./public/special-order.html"><h4>special customisation shoe</h4></a><br>
+        <a href="./public/contact-us.html">Contact us</a>
+    </footer>
 </body>
 </html>
