CSS 1 Exercises -Exercise 1 (Dark website)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="keywords" content="shoes, shop, sport, sport shoes" />
     <meta name="author" content="Waleed AlZahrani" />
 
+    <link rel="stylesheet" href="./DarkMode.css">
+
     <title>Shoo Shope</title>
 </head>
 
@@ -28,7 +30,7 @@
             <img src="./image/20230809_hp_running_shoes_men.png" alt="man runing by sport shoes" width="1000">
         </figure>
 
-        <article id="aboutUs">
+        <article id="aboutUs" style="border: 3px solid black; padding: 1px 20px ;">
             <h2>What is shoo Shop:</h2>
             <p>
                 Shoo Shop is your go-to destination for all things footwear. We specialize in
@@ -45,15 +47,24 @@
         <hr>
 
         <h3>New Models</h3>
-        <a href="./public/mans-brooks.html"><img src="./image/42441-025.webp" width="300" alt="shoes"></a>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="./public/mens-asics.html"><img src="./image/43232-440.webp" width="300" alt="shoes"></a>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="./public/mens-hoka.html"><img src="./image/43267-800.webp" width="300" alt="shoes"></a>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="./public/mens-running-shoes.html"><img src="./image/CG-120-G-FULLBLK-2.jpg.jpeg" width="280"
-                alt="shoes"></a>
-
+        <section>
+            <span>
+                <a href="./public/mans-brooks.html"><img src="./image/42441-025.webp" width="300" alt="shoes">
+                <br><div><b>Mans Brooks</b></div> </a>
+            </span>
+            <span>
+                <a href="./public/mens-asics.html"><img src="./image/43232-440.webp" width="300" alt="shoes">
+                <br><div><b>Mens Asics</b></div></a>
+            </span>
+            <span>
+                <a href="./public/mens-hoka.html"><img src="./image/43267-800.webp" width="300" alt="shoes">
+                <br><div><b>Men Hoke</b></div></a>
+            </span>
+            <span>
+                <a href="./public/mens-running-shoes.html"><img src="./image/CG-120-G-FULLBLK-2.jpg.jpeg" width="280" alt="shoes">
+                <br><div><b>TYSON Pro</b></div></a>
+            </span>
+        </section>
         <br>
         <hr>
 
