--- a/public/mens-hoka.html
+++ b/public/mens-hoka.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
+    <link rel="stylesheet" href="../DarkMode.css">
+
 </head>
 <body>
     <H1>MEN'S HOKA CLIFTON 9</H1>
