--- a/public/Apple.html
+++ b/public/Apple.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple</title>
+    <link rel="stylesheet" href="../DarkMode.css">
 
     <style>
 
@@ -16,6 +17,7 @@
             height: 100%;
             border-radius: 10px;
         }
+    
 
     </style>
 </head>
