--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
+    <link rel="stylesheet" href="../DarkMode.css">
+
 </head>
 <body>
     <h1>Contact us:</h1>
