--- a/public/mans-brooks.html
+++ b/public/mans-brooks.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
+    <link rel="stylesheet" href="../DarkMode.css">
+
 </head>
 <body>
     <H1>MEN'S BROOKS GHOST 15</H1>
