--- a/public/mens-asics.html
+++ b/public/mens-asics.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
+    <link rel="stylesheet" href="../DarkMode.css">
+
 </head>
 <body>
     <H1>MEN'S ASICS GEL-NIMBUS 25</H1>
