--- a/public/mens-running-shoes.html
+++ b/public/mens-running-shoes.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
+    <link rel="stylesheet" href="../DarkMode.css">
+
 </head>
 <body>
     <H1>TYSON Pro Black Men's Running Shoes</H1>
