--- a/public/special-order.html
+++ b/public/special-order.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+        <link rel="stylesheet" href="../DarkMode.css">
+
     <title>Special Order</title>
 </head>
 <body>
