--- a/public/thankYou.html
+++ b/public/thankYou.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Thank You</title>
+    <link rel="stylesheet" href="../DarkMode.css">
+
 </head>
 <body>
     <h1>Thank You for your trust </h1>
