--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
     <main>
         <figure>
-            <img class="main-img" src="./image/20230809_hp_running_shoes_men.png" alt="man runing by sport shoes"
-                width="1000">
+            <img class="main-img" src="./image/20230809_hp_running_shoes_men.png" alt="man runing by sport shoes"width="1000">
+            <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
         </figure>
 
         <article id="aboutUs">
@@ -54,25 +54,28 @@
         <h3>New Models</h3>
         <section class="shoes-container">
             <span  class="shoes-card">
-                <a href="./public/mans-brooks.html"><img src="./image/Screenshot-removebg-preview.png" alt="shoes">
+                <a href="./public/mans-brooks.html"><img class="shoes-img" src="./image/Screenshot-removebg-preview.png" alt="shoes">
+                    <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
                     <br><b>Mans Brooks</b> </a>
             </span>
             <span class="shoes-card">
-                <a href="./public/mens-asics.html"><img src="./image/Screenshot-removebg-preview (2).png" alt="shoes">
+                <a href="./public/mens-asics.html"><img class="shoes-img" src="./image/Screenshot-removebg-preview (2).png" alt="shoes">
+                    <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
                     <br>
                     <div><b>Mens Asics</b></div>
                 </a>
             </span>
             <span class="shoes-card">
-                <a href="./public/mens-hoka.html"><img src="./image/Screenshot-removebg-preview (1).png" alt="shoes">
+                <a href="./public/mens-hoka.html"><img class="shoes-img" src="./image/Screenshot-removebg-preview (1).png" alt="shoes">
+                    <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
                     <br>
                     <div><b>Men Hoke</b></div>
                 </a>
             </span>
             <span class="shoes-card">
-                <a href="./public/mens-running-shoes.html"><img
-                        src="./image/CG-120-G-FULLBLK-2.jpg-removebg-preview.png" alt="shoes">
-                    <br>
+                <a href="./public/mens-running-shoes.html"><img class="shoes-img" src="./image/CG-120-G-FULLBLK-2.jpg-removebg-preview.png" alt="shoes">
+                        <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
+                        <br>
                     <div><b>TYSON Pro</b></div>
                 </a>
             </span>
