css4 -Exercise 4  (Media Queries in the CSS )

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Shoo Shope</title>
 </head>
 
+
 <body>
     <header>
         <h1>Shoo Shop</h1>
@@ -27,6 +28,8 @@
             </ul>
         </nav>
     </header>
+    <div class="line"></div>
+
     <main>
         <figure>
             <img class="main-img" src="./image/20230809_hp_running_shoes_men.png" alt="man runing by sport shoes"width="1000">
@@ -47,7 +50,6 @@
         </article>
 
 
-        <hr>
         <div class="line"></div>
 
         
