--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             <span  class="shoes-card">
                 <a href="./public/mans-brooks.html"><img class="shoes-img" src="./image/Screenshot-removebg-preview.png" alt="shoes">
                     <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
-                    <br><b>Mans Brooks</b> </a>
+                    <b>Mans Brooks</b> </a>
             </span>
             <span class="shoes-card">
                 <a href="./public/mens-asics.html"><img class="shoes-img" src="./image/Screenshot-removebg-preview (2).png" alt="shoes">
                     <img class="watermark" src="./image/watermark .png" alt="woterMark fot shoo shop">
-                    <br>
+                    
                     <div><b>Mens Asics</b></div>
                 </a>
             </span>
