--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
-    <link rel="stylesheet" href="../DarkMode.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
