--- a/public/mans-brooks.html
+++ b/public/mans-brooks.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <title>Shoo Shop</title>
-    <link rel="stylesheet" href="../DarkMode.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
     <H1>MEN'S BROOKS GHOST 15</H1>
-    <img src="../image/42441-025.webp" width="500" alt="">
+    <img src="../image/Screenshot-removebg-preview.png" width="500" alt="">
     <br>
 
     <h2>Men's BROOKS GHOST 15:</h2>
