--- a/public/special-order.html
+++ b/public/special-order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <link rel="stylesheet" href="../DarkMode.css">
+        <link rel="stylesheet" href="../style.css">
 
     <title>Special Order</title>
 </head>
