--- a/public/conformation.html
+++ b/public/conformation.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoo Shop</title>
-    <link rel="stylesheet" href="../DarkMode.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Your Email Has been Sent Successfully!! </h1>
