--- a/public/thankYou.html
+++ b/public/thankYou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Thank You</title>
-    <link rel="stylesheet" href="../DarkMode.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
